trying new script

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-*! Primitive
+/* *! Primitive
  * A front end Sass boilerplate
  *
  * Author: Tania Rascia
- */
+ */ 
 /* Variables
  * ===============
  *
