--- a/src/App.css
+++ b/src/App.css
@@ -18,23 +18,24 @@ body {
   text-decoration: none;
   margin-bottom: 10px;
   color: #d1d1d1;
-  transition: color 0.2s;
+  transition: color 0.8s;
 }
 
 .bm-item:hover {
-  color: white;
+  color: black;
 }
 
 .bm-burger-button {
   position: fixed;
   width: 36px;
   height: 30px;
-  left: 36px;
+  left: 10px;
   top: 36px;
+  margin-top: 350px;
 }
 
 .bm-burger-bars {
-  background: #373a47;
+  background: black;
 }
 
 .bm-cross-button {
@@ -47,7 +48,7 @@ body {
 }
 
 .bm-menu {
-  background: #373a47;
+  background: #fff;
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
 }
