--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@ body {
   margin: 0;
 }
 
+#logo-link {
+  color: white;
+  text-decoration: none;
+}
+
 #App {
   font-family: sans-serif;
   height: 100vh;
