--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,13 @@ body {
 
 #footer-text {
   text-align: center;
+  background-color: #3f51b5;
+  color: #ffffff;
+  font-size: 20px;
+  height: 50px;
+  margin: 0px, 10px;
+  margin-top:-7px;
+  vertical-align: middle;
 }
 
 .bm-item {
