--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,12 @@ body {
 }
 
 #App {
-  font-family: sans-serif;
+  font-family: 'Roboto',sans-serif;
   height: 100vh;
+}
+
+h1, h2, p, ul, li {
+  font-family: 'Roboto', sans-serif;
 }
 
 #page-wrap {
